P4PADEV-3681 updated business logic